--- a/Final_Project_HCI.html
+++ b/Final_Project_HCI.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
-    <div class="browser-bar">
-    </div>
+<body> <!--body-->
+    <div class="browser-bar"></div>
 
     <div class="header">
         <div class="logo">Lolatelone</div>
@@ -34,7 +33,7 @@
             </div>
         </div>
     </div>
-
+<!--table part, bellow nav and logo-->
     <div class="main-content">
         <div class="table-of-contents">
             <h2>Table of contents</h2>
@@ -44,7 +43,7 @@
                 <button class="category-btn">Button 2</button>
             </div>
         </div>
-
+<!--main information of products-->
         <div class="products-grid">
             <div class="product-card">
                 <div class="product-image">📦</div>
@@ -71,7 +70,7 @@
             </div>
         </div>
     </div>
-
+<!--2 footer section-->
     <div class="footer-section">
         <div class="footer-box description-box">
             <div class="footer-image">🖼️</div>
@@ -86,7 +85,7 @@
                 </p>
             </div>
         </div>
-
+<!--contacts email-->
         <div class="footer-box">
             <h3>Contact</h3>
             <div class="contact-box">
