--- a/overhaul folder/Final_Project_HCI.html
+++ b/overhaul folder/Final_Project_HCI.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lotalone</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="x-icon" href="icon.png" />
 </head>
 <body>
 
-<!--header-->
-<div class="browser-bar"></div>
+<!--header part-->
+<div class="browser-bar"></div><!--grey style bar-->
+
 <div class="header-container">
     <h1>Lotalone</h1>
+    <div class="about-section">
+        <div class="img-container"><img src="logo.png"></div>
+        <div class="header-text">
+            <h3>About us</h3>
+            <p>Our Store was first founded to celebrate our passion for doodles. We hope our doodles can bring joy & fond memories to our customers</p>
+        </div>
+    </div>
 </div>
 
 </body>
