--- a/cart.html
+++ b/cart.html
@@ -29,6 +29,44 @@
     </ul>
     </nav>
 </div>
-    
+    <div class="cart-container">
+    <div class="product-cart">
+        <img src="./product photo/product1.png">
+        <h2>Shopping Bag</h2>
+        <h3>foldable tote - Eid Cookies - Olive</h3>
+        <div>
+            <a class="nav-btn">
+                <i class='bx  bx-trash-alt'></i> 
+                10
+                <i class='bx  bx-plus'></i> 
+            </a>
+        </div>
+    </div>
+    <div class="product-cart">
+        <img src="./product photo/product2.png">
+        <h2>Tumbler</h2>
+        <h3>tumbler bottle - Eid Cookies</h3>
+        <div>
+            <a class="nav-btn">
+                <i class='bx  bx-trash-alt'></i> 
+                10
+                <i class='bx  bx-plus'></i> 
+            </a>
+        </div>
+    </div>
+    <div class="product-cart">
+        <img src="./product photo/product3.png">
+        <h2>Shopping Bag</h2>
+        <h3>foldable tote - Takjil</h3>
+        <div>
+            
+                <a class="nav-btn">
+                <i class='bx  bx-trash-alt'></i> 
+                10
+                <i class='bx  bx-plus'></i> 
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
