added offers picture
Signed-off-by: richielyman <Richie.lyman@binus.ac.id>

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="containers">
     <div class="img-container-offers">
-        <img src="offers.png">
+        <a href="items.html"><img src="offers.png"></a>
     </div>
     <div class="contact-container">
         <h2>Contact Us</h2>
