--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link href='https://cdn.boxicons.com/3.0.5/fonts/basic/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+<!--HEADER-->
+   <header class="main-nav">
+       <div class="client-logo">
+           <img src="pic/icon.png">
+           <h1>LOLATELONE</h1>
+       </div>
+       <nav class="nav-links" id="mobile-menu">
+           <ul>
+               <li><a href="index.html" class="nav-btn active">Home</a></li>
+               <li><a href="products.html" class="nav-btn">Products</a></li>
+           </ul>
+       </nav>
+       <button class="hamburger" aria-expanded="false" aria-controls="mobile-menu">
+           <i class='bxr  bx-menu'></i>
+       </button>
+   </header>
 
 <!-- MAIN -->
    <main>
