--- a/payment.html
+++ b/payment.html
@@ -8,6 +8,18 @@
     <link rel="shortcut icon" type="x-icon" href="pic/icon.png" />
     <link href='https://cdn.boxicons.com/3.0.5/fonts/basic/boxicons.min.css' rel='stylesheet'>
 </head>
+<style>/* richies part */
+    @media (max-width: 768px){
+        html{
+            font-size: 14px;
+        }
+    }
+    @media (max-width: 425px) {
+        html{
+            font-size: 13px;
+        }
+    }
+</style>
 <body>
 
     <header class="main-nav">
