added aria & alt text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--HEADER-->
     <header class="main-nav">
         <div class="client-logo">
-            <img src="pic/icon.png">
+            <img src="pic/icon.png" alt="Lolatelone Logo">
             <h1>LOLATELONE</h1>
         </div>
         <nav class="nav-links" id="mobile-menu">
@@ -21,44 +21,44 @@
                 <li><a href="products.html" class="nav-btn">Products</a></li>
             </ul>
         </nav>
-        <button class="hamburger" aria-expanded="false" aria-controls="mobile-menu">
-            <i class='bxr  bx-menu'></i> 
+        <button class="hamburger" aria-expanded="false" aria-controls="mobile-menu" aria-label="Toggle navigation menu">
+            <i class='bxr bx-menu' aria-hidden="true"></i> 
         </button>
     </header>
 
-
+    
     <!-- MAIN -->
     <main>
         <!-- hero banner -->
         <section class="hero-container">
             <div class="hero-img">
-                <img src="pic/outfit1.png">
+                <img src="pic/outfit1.png" alt="Model wearing Lolatelone outfit">
             </div>
             <div class="hero-about">
                 <h1>ABOUT US</h1>
                 <p>Our Store was first founded to celebrate our passion for doodles. <br> We hope our doodles can bring joy & fond memories to our customers! </p>
             </div>
         </section>
-        
+
         <!-- what we sell -->
         <section class="selling-offers">
             <h1>What We Sell</h1>
             <div class="selling-items">
                 <div class="preview totebag-pv"> 
                     <h3>Big Totebags</h3>
-                    <img src="product_photo/tote1.png">
+                    <img src="product_photo/tote1.png" alt="Big Totebag">
                 </div>
                 <div class="preview tumblr-pv">
                     <h3>Safe Tumblers</h3>
-                    <img src="product_photo/tumblr1.png">
+                    <img src="product_photo/tumblr1.png" alt="Safe Tumbler">
                 </div>
                 <div class="preview keychain-pv">
                     <h3>Cute Keychains</h3>
-                    <img src="product_photo/keychain.jpg">
+                    <img src="product_photo/keychain.jpg" alt="Cute Keychain">
                 </div>
                 <div class="preview candle-pv">
                     <h3>Comforting Candles</h3>
-                    <img src="product_photo/candle.jpg">
+                    <img src="product_photo/candle.jpg" alt="Comforting Candle">
                 </div>
             </div>
         </section>
