--- a/payment.html
+++ b/payment.html
@@ -24,14 +24,14 @@
 
     <header class="main-nav">
         <div class="client-logo">
-            <img src="pic/icon.png">
+            <img src="pic/icon.png" alt="Lolatelone Logo">
             <h1>LOLATELONE</h1>
         </div>
     </header>
 
     <section class="breadcrumb">
         <a href="products.html">
-            <i class='bx bx-chevron-left'></i> 
+            <i class='bx bx-chevron-left' aria-hidden="true"></i> 
             <p>Back to Products</p>
         </a>
     </section>
@@ -41,14 +41,14 @@
 
             <div class="form-group">
                 <h3>Customer Details</h3>
-                <label>Full Name</label>
-                <input type="text" name="Name" placeholder="Lolatelone" required>
+                <label for="fullName">Full Name</label>
+                <input type="text" id="fullName" name="Name" placeholder="Lolatelone" required>
 
-                <label>Email Address</label>
-                <input type="email" name="Email" placeholder="you@email.com" required>
+                <label for="emailAddr">Email Address</label>
+                <input type="email" id="emailAddr" name="Email" placeholder="you@email.com" required>
 
-                <label>Phone Number</label>
-                <input type="tel" name="Phone" placeholder="0812xxxxxxx" required>
+                <label for="phoneNum">Phone Number</label>
+                <input type="tel" id="phoneNum" name="Phone" placeholder="0812xxxxxxx" required>
             </div>
 
             <div class="form-group"> 
@@ -68,3 +68,4 @@
     </script>
 
 </body>
+</html>
