--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
     <!--HEADER-->
     <header class="main-nav">
         <div class="client-logo">
-            <img src="pic/icon.png" alt="Logo">
+            <img src="pic/icon.png" alt="Lolatelone Logo">
             <h1>LOLATELONE</h1>
         </div>
 
@@ -22,15 +22,15 @@
                 <li><a href="index.html" class="nav-btn">Home</a></li>
                 <li><a href="products.html" class="nav-btn active">Products</a></li>
                 <li>
-                    <a href="#" class="nav-btn" onclick="openCart(); return false;">
-                        <i class='bx bx-cart'></i>
+                    <a href="#" class="nav-btn" onclick="openCart(); return false;" aria-label="View Cart">
+                        <i class='bx bx-cart' aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
         </nav>
 
-        <button class="hamburger">
-            <i class='bx  bx-menu'></i>  
+        <button class="hamburger" aria-label="Toggle navigation menu">
+            <i class='bx bx-menu' aria-hidden="true"></i>  
         </button>
     </header>
 
@@ -42,12 +42,11 @@
         <section class="product-section">
             <div class="product-container">
 
-                <!-- POP UP -->
-
+                <!-- POP UP -->                 
                 <div id="miniPopup" class="mini-popup">
                     <div class="mobile-popup">
-                        <button class="close-btn" onclick="closePopup()">
-                        <i class='bx bx-x arrow-back'></i>
+                        <button class="close-btn" onclick="closePopup()" aria-label="Close product details">
+                            <i class='bx bx-x arrow-back' aria-hidden="true"></i>
                         </button>
 
                         <div class="popup-content">
@@ -60,8 +59,9 @@
                             <div id="popupDetails">...</div>
 
                             <div class="qty-selector">
-                                <button onclick="changePopupQty(-1)">-</button>
-                                <span id="popupQty">1</span> <button onclick="changePopupQty(1)">+</button>
+                                <button onclick="changePopupQty(-1)" aria-label="Decrease quantity">-</button>
+                                <span id="popupQty">1</span> 
+                                <button onclick="changePopupQty(1)" aria-label="Increase quantity">+</button>
                             </div>
 
                             <button class="add-to-cart-btn" onclick="addToCart()">Add to Cart</button>
@@ -73,8 +73,7 @@
 
                 </div>
 
-                <div class="mobile-ui"><!-- mobile ui div -->
-                    <nav class="category-nav">
+                <div class="mobile-ui"><nav class="category-nav">
                     <ul>
                         <li><button class="filter-btn active" onclick="filterSelection('totebag')">Tote Bags</button></li>
                         <li><button class="filter-btn" onclick="filterSelection('tumblr')">Tumblers</button></li>
@@ -84,9 +83,8 @@
                     </nav>
                     <div class="product-grid">
 
-                        <!-- TOTEBAG -->
-                        <article class="lookbook-item totebag eid-cookies" onclick="openPopup(this)">
-                            <img src="./product_photo/tote1.png">
+                        <article class="lookbook-item totebag eid-cookies" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Eid Cookies Tote">
+                            <img src="./product_photo/tote1.png" alt="Eid Cookies Tote">
                             <h3>Eid Cookies Tote</h3>
                             <p>Sweet storage.</p>
                             <div class="full-details" style="display:none">
@@ -99,8 +97,8 @@
                             </div>
                         </article>
 
-                        <article class="lookbook-item totebag takjil" onclick="openPopup(this)">
-                            <img src="./product_photo/tote2.png">
+                        <article class="lookbook-item totebag takjil" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Takjil Tote">
+                            <img src="./product_photo/tote2.png" alt="Takjil Tote">
                             <h3>Takjil Tote</h3>
                             <p>Perfect for Ramadan.</p>
                             <div class="full-details" style="display:none">
@@ -113,8 +111,8 @@
                             </div>
                         </article>
 
-                        <article class="lookbook-item totebag yoga-poses" onclick="openPopup(this)">
-                            <img src="./product_photo/tote3.png">
+                        <article class="lookbook-item totebag yoga-poses" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Yoga Poses Tote">
+                            <img src="./product_photo/tote3.png" alt="Yoga Poses Tote">
                             <h3>Yoga Poses Tote</h3>
                             <p>Find your balance.</p>
                             <div class="full-details" style="display:none">
@@ -127,8 +125,8 @@
                             </div>
                         </article>
 
-                        <article class="lookbook-item totebag wfy-life" onclick="openPopup(this)">
-                            <img src="./product_photo/tote4.jpg">
+                        <article class="lookbook-item totebag wfy-life" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for WYF Life Tote">
+                            <img src="./product_photo/tote4.jpg" alt="WYF Life Tote">
                             <h3>WYF Life Tote</h3>
                             <p>Find your balance.</p>
                             <div class="full-details" style="display:none">
@@ -141,9 +139,8 @@
                             </div>
                         </article>
 
-                        <!-- TUMBLR -->
-                        <article class="lookbook-item tumblr eid-cookies" onclick="openPopup(this)">
-                            <img src="./product_photo/tumblr1.png">
+                        <article class="lookbook-item tumblr eid-cookies" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Eid Tumbler">
+                            <img src="./product_photo/tumblr1.png" alt="Eid Tumbler">
                             <h3>Eid Tumbler</h3>
                             <p>Keep drinks cold.</p>
                             <div class="full-details" style="display:none">
@@ -156,8 +153,8 @@
                             </div>
                         </article>
 
-                        <article class="lookbook-item tumblr christmas" onclick="openPopup(this)">
-                            <img src="./product_photo/tumblr2.jpg">
+                        <article class="lookbook-item tumblr christmas" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Xmas Tumbler">
+                            <img src="./product_photo/tumblr2.jpg" alt="Xmas Tumbler">
                             <h3>Xmas Tumbler</h3>
                             <p>Festive sips.</p>
                             <div class="full-details" style="display:none">
@@ -170,9 +167,8 @@
                             </div>
                         </article>
 
-                        <!-- KEYCHAIN -->
-                        <article class="lookbook-item keychain christmas" onclick="openPopup(this)">
-                            <img src="./product_photo/keychain.jpg">
+                        <article class="lookbook-item keychain christmas" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Christmas Keychain">
+                            <img src="./product_photo/keychain.jpg" alt="Christmas Keychain">
                             <h3>Christmas Keychain</h3>
                             <p>Small and cute.</p>
                             <div class="full-details" style="display:none">
@@ -183,8 +179,8 @@
                                 </div>
                             </div>
                         </article>
-                        <article class="lookbook-item keychain christmas-tree" onclick="openPopup(this)">
-                            <img src="./product_photo/keychain.jpg">
+                        <article class="lookbook-item keychain christmas-tree" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Christmas Tree Keychain">
+                            <img src="./product_photo/keychain.jpg" alt="Christmas Tree Keychain">
                             <h3>Christmas Tree Keychain</h3>
                             <p>Small and cute.</p>
                             <div class="full-details" style="display:none">
@@ -196,9 +192,8 @@
                             </div>
                         </article>
 
-                        <!-- CANDLE -->
-                        <article class="lookbook-item candle gingerbread 100gr" onclick="openPopup(this)">
-                            <img src="./product_photo/candle.jpg">
+                        <article class="lookbook-item candle gingerbread 100gr" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Gingerbread Candle 100gr">
+                            <img src="./product_photo/candle.jpg" alt="Gingerbread Candle 100gr">
                             <h3>Gingerbread Candle 100gr</h3>
                             <p>Smells like home.</p>
                             <div class="full-details" style="display:none">
@@ -211,8 +206,8 @@
                             </div>
                         </article>
 
-                        <article class="lookbook-item candle 200gr" onclick="openPopup(this)">
-                            <img src="./product_photo/candle.jpg">
+                        <article class="lookbook-item candle 200gr" onclick="openPopup(this)" tabindex="0" role="button" aria-label="View details for Gingerbread Candle 200gr">
+                            <img src="./product_photo/candle.jpg" alt="Gingerbread Candle 200gr">
                             <h3>Gingerbread Candle 200gr</h3>
                             <p>Smells like home.</p>
                             <div class="full-details" style="display:none">
@@ -242,7 +237,9 @@
         <div id="cartSidebar" class="cart-sidebar">
             <div class="cart-header">
                 <h2>Your Cart (0)</h2>
-                <span class="close-cart" onclick="closeCart()"><i class='bx bx-x arrow-back'></i></span>
+                <span class="close-cart" onclick="closeCart()" role="button" tabindex="0" aria-label="Close Cart">
+                    <i class='bx bx-x arrow-back' aria-hidden="true"></i>
+                </span>
             </div>
             
             <div class="cart-items">
